Fix API with @faisalabdulaziz

--- a/quizapp/main_app/templates/index.html
+++ b/quizapp/main_app/templates/index.html
@@ -80,6 +80,7 @@
                  {% elif category.name == 'Entertainment: Japanese Anime & Manga' %}
                  class="text-center bg-danger text-white"
                  {% elif category.name == 'Entertainment: Cartoon & Animations' %}
+                 class="text-center bg-warning text-white"
                  {% endif %}
               >
                 {{category.name}}
