--- a/quizapp/main_app/templates/base.html
+++ b/quizapp/main_app/templates/base.html
@@ -38,10 +38,9 @@
         <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
       </li>                         
       {% else %}
-      <div class="topnav-right">
       <span><a href="{% url 'login' %}" >Login</a></span>
       <span> | </span>
-      <span><a href="{% url 'signup' %}">SignUp</a></span></div>
+      <span><a href="{% url 'signup' %}">SignUp</a></span>
       {% endif %}  
     </ul>
     
@@ -50,11 +49,15 @@
 
     {% block content %}
     {% endblock %}
-    <div class="mt-3">
-        <footer class="bg-dark p-3 text-center text-white">
+    <div id="footer" class="mt-3">
+        <footer style="position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        color: white;
+        text-align: center;"  class="bg-dark p-3 text-center text-white">
             Copyright &copy; 2021. All Rights Reserved, QuizApp. 
         </footer>
     </div>
 </body>
- 
 </html>
