--- a/quizapp/main_app/templates/Questions.html
+++ b/quizapp/main_app/templates/Questions.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 
 <body>
@@ -71,9 +72,34 @@
       <div class="row">
         <div class="col">
           <div style="margin-left: 10px">
-            <button class="btn btn-outline-warning" id="help">
+            <button class="btn btn-outline-warning" id="help" data-toggle="modal" data-target="#helpmodal">
               Need Help<i class="fas fa-question ml-2"></i>
             </button>
+          </div>
+          <div class="p-5"></div>
+          <div class="modal fade" id="helpmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Need Help?</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div style="width: 150px; height: 150px;" class="m-auto">
+                    <img style="width: 100%;" src="{% static 'help.jpg' %}" alt="img" />
+                  </div>
+                  <p class="text-center font-weight-bold" style="margin-bottom: 0;">
+                    Are you sure you need help?
+                  </p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-success">Yes</button>                 
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>                 
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
