--- a/quizapp/main_app/templates/Questions.html
+++ b/quizapp/main_app/templates/Questions.html
@@ -61,9 +61,12 @@
           </div>
           <!-- <p id='click'> {{ correct_answer }}</p> -->
           <p id='click'> </p>
-          <a href="{% url 'result' no=800  category=category %}"><button type="submit"> Submit</button></a>
+          <!-- <a href="{% url 'result' no=800  category=category %}"><button type="submit"> Submit</button></a> -->
           <!-- <a href="/result/"><button type="submit" onclick=showPosition()> Submit</button></a> -->
-          <a><button id="nextbtn" type="next" onclick=next()> next</button></a>
+          <a><button id="nextbtn" type="next" class="next round" style ="text-decoration: none;
+            display: inline-block;
+            padding: 8px 16px" onclick=next()> &#8250;</button></a>
+          <!-- <a href="#" class="next round">&#8250;</a> -->
 
 
         </div>
