--- a/quizapp/main_app/templates/index.html
+++ b/quizapp/main_app/templates/index.html
@@ -88,6 +88,29 @@
             </a>
             </div>
             {% endfor%}
+            <a href="{% url 'levels' 0 %}">
+              <div
+                class="col-12 col-sm-4 mb-3 d-flex justify-content-center align-items-center"
+              >
+              
+                <div
+                  style="
+                     width: 200px;
+                    height: 150px;
+                    font-weight: 600;
+                    border: 1px solid#ddd;
+                    border-radius: 10px;
+                    padding: 8px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;              
+                  "
+                   class="text-center bg-warning text-white"
+                  
+                >
+                  SEI-14
+                </div>
+              </a>
           </div>
         </div>
       </div>
