--- a/quizapp/main_app/templates/index.html
+++ b/quizapp/main_app/templates/index.html
@@ -88,7 +88,7 @@
             </a>
             </div>
             {% endfor%}
-            <a href="{% url 'levels' 0 %}">
+            <a href="{% url 'sei' %}">
               <div
                 class="col-12 col-sm-4 mb-3 d-flex justify-content-center align-items-center"
               >
