--- a/quizapp/main_app/templates/base.html
+++ b/quizapp/main_app/templates/base.html
@@ -9,11 +9,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://kit.fontawesome.com/a215bce284.js"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'style4.css' %}">
 </head>
@@ -33,7 +28,7 @@
           <a class="nav-link" href="/category/">Categories <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/category_for_top_five/">Top Five</a>
+          <a class="nav-link" href="{% url 'category_top_five' %}">Top Five</a>
         </li>
       {% if user.is_authenticated %}
       <li class="nav-item">
