--- a/quizapp/main_app/templates/Result.html
+++ b/quizapp/main_app/templates/Result.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 {% csrf_token %}
-
 <body>
     <div>
       <div class="container">
@@ -9,7 +8,7 @@
           <h1>{{category}}</h1>
           <h3 class="p-3 text-center">Congrats🎉! You Finish your Quiz.</h3>
         </div>
-        <div class="row mb-3">
+        <div class="col mb-3">
           <div
             class="col-12 mb-3 col-sm-4 d-flex justify-content-center align-items-center"
           >
@@ -27,7 +26,7 @@
               Score: {{no}}/5
             </div>
           </div>
-          <div
+          <!-- <div
             class="col-12 mb-3 col-sm-4 d-flex justify-content-center align-items-center"
           >
             <div
@@ -57,14 +56,14 @@
               <i class="fas fa-trophy mr-1"></i> Win Streak: 5
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="row">
           <div class="col text-center">
             <div style="margin-left: 10px">
-              <button class="btn btn-success p-3 px-5">
+              <a href ="{% url 'category' %}"><button class="btn btn-success p-3 px-5">
                 Play Again<i class="fas fa-question ml-2"></i>
-              </button>
+              </button></a>
             </div>
           </div>
         </div>
